Stop the logo overhanging the nav on tablet

--- a/app/webpacker/styles/header/logo.scss
+++ b/app/webpacker/styles/header/logo.scss
@@ -12,6 +12,10 @@
 	  	position: relative;
   }
 
+  @include mq($from: tablet) {
+    top: -8px;
+  }
+
   @include mq($from: desktop) {
     top: -23px;
   }
